Ensures operations can be done with title or id
