# server.js
@@ -75,7 +75,11 @@ router
 router
   .route("/mangas/:username/title/:manga_title")
   // get user's manga info
-  .get(authController.validateToken, mangaController.getMangasbyTitle);
+  .get(authController.validateToken, mangaController.getManga)
+  // update user's manga info
+  .put(authController.validateToken, mangaController.putManga)
+  // deletes user's manga
+  .delete(authController.validateToken, mangaController.delManga);
 
 // Create endpoint handlers for /mangas/:username
 router
